--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,8 +6,8 @@
         <title>Cornhub</title>
         <meta name="description" content="A site to browse corn">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="styles.css">
-        <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
+        <link rel="stylesheet" href="assets/styles.css">
+        <link href="assets/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     </head>
     <body>
         <main>
@@ -15,12 +15,16 @@
                 Good Quality Corn
             </h1>    
             <p>
-                <a href="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwjEuZX_hYnnAhWX_J4KHZDuCsIQjRx6BAgBEAQ&url=https%3A%2F%2Fwww.eater.com%2F2016%2F4%2F15%2F11438774%2Fmichael-buble-corn-on-the-cob-wtf-no-no-no&psig=AOvVaw0ubudWwLB0yErZYlcvV4_d&ust=1579295940895332">Corn eater eats corn</a>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, assumenda veritatis alias numquam eius saepe. Facilis, ut temporibus consequatur, cupiditate earum culpa placeat nobis pariatur praesentium enim suscipit ullam at!
+                <a  class=hidden href="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwjEuZX_hYnnAhWX_J4KHZDuCsIQjRx6BAgBEAQ&url=https%3A%2F%2Fwww.eater.com%2F2016%2F4%2F15%2F11438774%2Fmichael-buble-corn-on-the-cob-wtf-no-no-no&psig=AOvVaw0ubudWwLB0yErZYlcvV4_d&ust=1579295940895332">Corn eater eats corn</a>
+                <img src="./assets/Hamster toy ad.gif" alt="G fuel gamers">
+                <br>
+                Save $15 or more on hamster insurance
             </p>
         
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, assumenda veritatis alias numquam eius saepe. Facilis, ut temporibus consequatur, cupiditate earum culpa placeat nobis pariatur praesentium enim suscipit ullam at!
+              <img src="./assets/quentin-danblon-gif-gfuel.gif" alt="G fuel gamers">
+              <br>
+              Save $5 on pure gamer fuel.
             </p>
         </main>
            
@@ -52,9 +56,9 @@
           </div>    
     
             
-            <script src="carousel.js" async defer></script>
-            <script src="mouse-tracker.js" async defer></script>
-        <img id="Corn" src="./corn-on-the-cob-maize-clip-art-corn-png-clip-art-image.png" alt="corn rocket with kitten passenger">
-        <img id="flames" src="./giphy.gif" alt="Flaming fire">
+            <script src="assets/carousel.js" async defer></script>
+            <script src="assets/mouse-tracker.js" async defer></script>
+        <img id="Corn" src="./assets/corn-on-the-cob-maize-clip-art-corn-png-clip-art-image.png" alt="corn rocket with kitten passenger">
+        <img id="flames" src="./assets/giphy.gif" alt="Flaming fire">
       </body> 
 </html>
