--- a/assets/styles.css
+++ b/assets/styles.css
@@ -13,6 +13,7 @@ grid-column: 1 / -1;
 p  {
     font-weight: bold;
     font-style: oblique;
+    position: relative;
 }
 img{
     grid-column: 1 / -1;
@@ -21,6 +22,7 @@ img{
 }
 a{
     opacity: 0;
+    position:absolute;
 }
 
 .carousel-wrapper {
