--- a/assets/styles.css
+++ b/assets/styles.css
@@ -35,6 +35,7 @@ a{
   }
   .carousel {
     transform-style: preserve-3d;
+    height: 600px
   }
   .carousel__photo {
     opacity: 0;
@@ -43,7 +44,7 @@ a{
     top:0;
     width:auto;
     max-width: 100%;
-    max-height: 90vh;
+    max-height: 100%;
     margin: auto;
     padding: 1rem 4rem;
     z-index: 100;
